--- a/contracts/starkpet/Scarb.toml
+++ b/contracts/starkpet/Scarb.toml
@@ -8,3 +8,8 @@ edition = "2023_11"
 [dependencies]
 starknet = ">=2.6.4"
 openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.14.0" }
+
+
+[[target.starknet-contract]]
+
+casm = true
