--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@dynamic-labs/ethereum": "^2.1.5",
     "@dynamic-labs/sdk-react-core": "^2.1.5",
+    "@dynamic-labs/starknet": "^2.2.3",
     "@rainbow-me/rainbowkit": "^2.1.2",
     "next": "14.2.4",
     "pino-pretty": "^11.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "starknet": "^5.24.3",
     "viem": "^2.14.2",
     "wagmi": "^2.10.2"
   },
